<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.CSCI.a3130_group_6.Registration.LoginPage" >


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="109dp"
        android:layout_above="@+id/userNameEt"
        android:layout_marginBottom="24dp"
        android:contentDescription="coverImage"
        android:src="@drawable/login_image" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/userNameEt"
        android:layout_above="@+id/passwordEt"
        android:background="#ffffff"
        android:hint="user name"
        android:paddingLeft="15dp"
        android:textColorHint="@android:color/darker_gray"
        />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/passwordEt"
        android:hint="password"
        android:textColorHint="@android:color/darker_gray"
        android:background="#ffffff"
        android:layout_marginBottom="5dp"
         android:layout_above="@+id/registerBt"
        android:layout_marginTop="3dp"
        android:paddingLeft="15dp"
        android:inputType="textPassword"

        />

    <Button
        android:id="@+id/loginBt_employee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/loginBt_employer"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="3dp"
        android:layout_marginRight="12dp"
        android:onClick="onClick"
        android:text="login as Employee"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <Button
        android:id="@+id/loginBt_employer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/loginStatus"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="12dp"
        android:onClick="onClick"
        android:text="Login as Employer"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <Button
        android:id="@+id/registerBt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:onClick="onClick"
        android:layout_above="@+id/loginBt_employee"
        android:text="registration"
        android:textSize="20sp"
        android:textColor="#ffffff"
        android:layout_marginTop="5dp"
        />

    <TextView
        android:layout_width= "200dp"
        android:layout_height= "wrap_content"
        android:id="@+id/loginStatus"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom = "true"
        android:gravity="center"
        android:layout_marginBottom="200dp"
        android:layout_marginTop="60dp"/>



</RelativeLayout>