<resources>
    <string name="app_name">3130_Group_6</string>
    <string name="EMPTY_STRING">""</string>
    <string name="EMPTY_USER_NAME">user name is empty</string>
    <string name="EMPTY_PASSWORD">password is empty</string>
    <string name="INCORRECT_LOGIN_INFO">user name or password are incorrect</string>
    <string name="title_activity_maps">Map</string>
</resources>